2010-06-13  Per Bothner  <per@bothner.com>

	* Symbol.java (equals): Revert 2010-05-19 change (but add comment and
	minor simplification) - uninterned symbols should only be equals if
	they're the same Symbol object.

2010-05-23  Per Bothner  <per@bothner.com>

	* Symbol.java (parse): Also recognize 'prefix{uri}:local' and
	'{uri}local'.
	(toString(char)): New method, to control printing of prefix and uri.
	(toString): Change to use toString(char).

2010-05-19  Per Bothner  <per@bothner.com>

	* SimpleSymbol.java (valueOf(String)): Move to super-class Symbol.
	* Symbol.java (valueOf): Also add 3 new overloaded methods.
	* Namespace.java (valueOf): Add new methods.
	(make, getInstance): Remove some old method names.
	(<init>): Make constructor be protected.
	(create): New factory methods in place of protected constructors.

	* Namespace.java (make(String,String)): Intern both uri and prefix.
	(toString): Also emit optional prefix.
	* Symbol.java (equals): Minor fix.

2010-04-13  Per Bothner  <per@bothner.com>

	* Values.java (make): Generalize from Sequence to java.util.List.

2010-04-10  Per Bothner  <per@bothner.com>

	* RunnableClosure.java: Also implement java.util.concurrent.Callable.
	(call): New method, to implement Callable.

2009-12-06  Per Bothner  <per@bothner.com>

	* MethodProc.java (mostSpecific): Fix logic bugs.
	This is one fix for Savannah bug #28022, though I decided it
	was best to *not* try to sort the methods for specificity.

2009-08-27  Per Bothner  <per@bothner.com>

	* Procedure.java (isSideEffectFree): New method.

2009-08-23  Per Bothner  <per@bothner.com>

	* Procedure.java (inlineCallsKey): New field.

	* Procedure.java (compilerKey): New field.

	* PropertyKey.java: New class.
	* LazyPropertyKey.java: New class, extends PropertyKey.
	* Makefile.am: Update accordingly.

2009-08-12  Per Bothner  <per@bothner.com>

	* Procedure.java (inlinerKey): New constant.

2009-08-10  Per Bothner  <per@bothner.com>
